SK-58: Fix translation gaps with minicart

--- a/app/design/frontend/IdeaInYou/skinsider/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/IdeaInYou/skinsider/Magento_Theme/web/css/source/_extend.less
@@ -279,6 +279,7 @@
 
                         .viewcart {
                             .lib-vendor-prefix-display();
+                            justify-content: center;
                         }
 
                         .count {
